[project]
name = "ignoro"
version = "0.2.0"
description = "A CLI for generating gitignore files for common programming languages"
authors = [
    {name = "solbero", email = "njosol@pm.me"},
]
dependencies = [
    "requests>=2.31.0",
    "typer[all]>=0.9.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
ignoro = "ignoro.cli:app"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "ruff>=0.0.285",
    "pytest>=7.4.0",
    "requests-mock[fixture]>=1.11.0",
    "pytest-cov>=4.1.0",
]
