[project]
name = "ignoro"
version = "1.1.1"
description = "A CLI for creating and modifying .gitignore files based on templates from gitignore.io"
authors = [
    {name = "solbero", email = "njosol@pm.me"},
]
maintainers = [
    {name = "solbero", email = "njosol@pm.me"},
]
dependencies = [
    "requests>=2.31.0",
    "typer[all]>=0.9.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
keywords = ["gitignore", "gitignore.io", "cli", "python", "typer"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.urls]
repository = "https://github.com/solbero/ignoro"
changelog = "https://github.com/solbero/ignoro/blob/main/CHANGELOG.md"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
ignoro = "ignoro.cli:app"

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.0.285",
    "pytest>=7.4.0",
    "requests-mock[fixture]>=1.11.0",
    "pytest-cov>=4.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
extend-select = ["PT", "UP", "C4", "N"]
extend-ignore = ["UP007"]
